<resources>
    <string name="app_name" translatable="false">KitStasher</string>
    <string name="facebook_app_id" translatable="false">280770575659727</string>
    <string name="openDrawer" translatable="false">open_drawer</string>
    <string name="closeDrawer" translatable="false">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_manual">Add</string>
    <string name="nav_view">View</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_account">Account</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="by_manufacturer">By Manufacturer</string>
    <string name="latest_added_first">Latest Added First</string>
    <string name="moved_to_trash">Moved to trash!</string>
    <string name="searching_online">Searching online …</string>
    <string name="no_matches_online">No matches in online base. Be the first to add!</string>
    <string name="scan_cancelled">Scan cancelled</string>
    <string name="scale">Scale</string>
    <string name="name">Title</string>
    <string name="manufacturer">* Manufacturer</string>
    <string name="cancelled">Canсelled</string>
    <string name="nothing_found_online">Sorry, nothing in online database. Let\'s add manually!</string>
    <string name="kit_added">Kit Added to Stash</string>
    <string name="clear_db">Deleting all data from database</string>
    <string name="export_from_db_to_file">Export from database to file</string>
    <string name="import_from_file_to_db">Import from file to database</string>
    <string name="import_to_db_started">Starting import to database, please wait</string>
    <string name="import_completed">Import successfully completed</string>
    <string name="clearDb" translatable="false">clearDb</string>
    <string name="exportDb" translatable="false">exportDb</string>
    <string name="viewTrash" translatable="false">viewTrash</string>
    <string name="editBrands" translatable="false">editBrands</string>
    <string name="importDb" translatable="false">importDb</string>
    <string name="repareBoxarts" translatable="false">repareBoxarts</string>
    <string name="restoreDb" translatable="false">restoreDb</string>
    <string name="all">All</string>
    <string name="all_">All: </string>
    <string name="air">Air</string>
    <string name="air_">Air: </string>
    <string name="sea">Sea</string>
    <string name="sea_">Sea: </string>
    <string name="ground">Ground</string>
    <string name="ground_">Ground: </string>
    <string name="space">Space</string>
    <string name="space_">Space: </string>
    <string name="cars_bikes">Cars/Bikes</string>
    <string name="cars_bikes_">Cars/Bikes: </string>
    <string name="auto_moto">Auto/Moto</string>
    <string name="auto_moto_">Auto/Moto: </string>
    <string name="Figures">Figures</string>
    <string name="Figures_">Figures: </string>
    <string name="Fantasy">Fantasy</string>
    <string name="Fantasy_">Fantasy: </string>
    <string name="other">Other</string>
    <string name="other_">Other: </string>
    <string name="item_deleted">Item Deleted</string>
    <string name="nothing_to_delete">Nothing to delete</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="date">Date</string>
    <string name="Help">Help</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="scan">Scan</string>
    <string name="file">File</string>
    <string name="camera">Camera</string>
    <string name="Search_by_code">Search by Code</string>
    <string name="Non_english_name">Non-English Title (if any)</string>
    <string name="Catalog_code">* Catalog Code</string>
    <string name="Scale_1">Scale 1/</string>
    <string name="Description">Description</string>
    <string name="Kit_name">Kit Title</string>
    <string name="Brand">Brand</string>
    <string name="Name_required">* Kit Title</string>
    <string name="Scale">Scale</string>
    <string name="Scale_required">* Scale 1/</string>
    <string name="today">Today</string>
    <string name="daily_max">Daily Max</string>
    <string name="delete_all">Delete All</string>
    <string name="_1">1/</string>
    <string name="entry_already_exist">Kit already in your stash</string>
    <string name="working_with_database">Working with database</string>
    <string name="completed">Completed</string>
    <string name="completed_offline_pass" translatable="false">Completed offline pass</string>
    <string name="sdcard_failed">SD card failed!</string>
    <string name="writing" translatable="false">Writing</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login" translatable="false">Your Name</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_success_message" translatable="false">Login successful! This concludes an example.</string>
    <string name="login_text" translatable="false">Log in</string>
    <string name="logout_text">Log out</string>
    <string name="facebook_button_text" translatable="false">Facebook</string>
    <string name="register_text" translatable="false">Register</string>
    <string name="restore_link">Restore Password</string>
    <string name="password_recovered_message">We sent an email to your email address with a link to a password change page. Please check your email and follow the link for further instructions.</string>
    <string name="restore_password_page_name">Password Restoration</string>
    <string name="registration_page_name" translatable="false">Registration</string>
    <string name="login_prompt">Login:</string>
    <string name="password_recovery_page_name">Password Recovery</string>
    <string name="warning_icon_description" translatable="false">warning icon</string>
    <string name="remember_login_text">Remember me</string>
    <string name="email_field_prompt">Email:</string>
    <string name="name_field_prompt" translatable="false">Name:</string>
    <string name="password_field_prompt">Password:</string>
    <string name="phoneNumber_field_prompt" translatable="false">PhoneNumber:</string>
    <string name="default_registered_text">Registered successfully!</string>
    <string name="registration_success_message" translatable="false">Thank you for registering with the %1$s. Click the button below to proceed to the login.</string>
    <string name="kitstasher_login">Log in with Email</string>
    <string name="login_with" translatable="false">Log in with:</string>
    <string name="new_user">New User</string>
    <string name="your_email" translatable="false">Your Email</string>
    <string name="achievments">Achievements: </string>
    <string name="enter_brand">Please enter Brand name</string>
    <string name="enter_cat_no">Please enter catalog code</string>
    <string name="enter_scale">Please enter Scale</string>
    <string name="enter_kit_name">Please enter Kit title</string>
    <string name="please_fill_fields">Please fill in all required fields</string>
    <string name="parse_application_id" translatable="false">9bb8b16b-ebcf-443c-a71b-69fc5abf5751</string>
    <string name="parse_client_key" translatable="false">xlBK4U5r4mDYi75QYDvswbM5cvpXC1uQ</string>
    <string name="parse_server_url" translatable="false">https://api.parse.buddy.com/parse/</string>
    <string name="check_now">Check</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="keep_logged_in">Keep Logged In</string>
    <string name="restore_password">Restore Password</string>
    <string name="register" translatable="false">Register</string>
    <string name="not_checked_yet" translatable="false">Not checked yet</string>
    <string name="not_checked" translatable="false">Not checked yet</string>
    <string name="report_incorrect_data" translatable="false">Report Incorrect Data</string>
    <string name="edit">Edit</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="saved_barcode" translatable="false">barcode</string>
    <string name="Auto_moto">Cars/Bikes</string>
    <string name="Cars_bikes">Cars/Bikes</string>
    <string name="Long_tap_to_delete">Long tap to delete</string>
    <string name="repair_images" translatable="false">Repair images</string>
    <string name="Export_database">Export database</string>
    <string name="Backup">Backup</string>
    <string name="Backup_text">Save database to file - you can import it later.</string>
    <string name="Database">Database</string>
    <string name="Repair_text">If you have problems with boxart images.</string>
    <string name="Images">Images</string>
    <string name="Restore_database">Restore database from backup. This will rewrite current database.</string>
    <string name="Found">Found!</string>
    <string name="Exception_Occured">Exception Occurred :</string>
    <string name="We_badly_need_internet">We badly need Internet…</string>
    <string name="Please_log_in">Please Log in</string>
    <string name="Welcome">Welcome,</string>
    <string name="Facebook_dont_know_you">Wow! Facebook don\'t know you! Why not to try again?</string>
    <string name="Manual_add">Manual Add</string>
    <string name="nav_more">More</string>
    <string name="Mylists">My Lists</string>
    <string name="Currency">Currency</string>
    <string name="Set">Set</string>
    <string name="Set_default_currency">Set default currency</string>
    <string name="Status">Status</string>
    <string name="Media">Media</string>
    <string name="please_choose">Please choose:</string>
    <string name="add_new_currency">Add new currency</string>
    <string name="paint_name">Supply name (e.g. Olive Drab)</string>
    <string name="paint_code">*Supply code (e.g. XF-62)</string>
    <string name="paint_brand">*Brand</string>
    <string name="personal_data_policy_fb">KitStasher uses Facebook API for registration. KitStasher gets user ID, user name and link to profile pic. You can read Facebook Personal Data Policy here.</string>
    <string name="personal_data_policy_p4b">KitStasher uses AppHQ API to store kits, add-ons and paints records. It also store Facebook user ID. You can read AppHQ Platform Personal Data Policy here.</string>
    <string name="personal_data_policy">Personal Data Policy</string>
    <string name="support">Support</string>
    <string name="kitstasher_support_text">KitStasher has Facebook page. Feel free to ask questions. Please remember that KitStasher is a personal hobby project. I\'ll try to do my best but I can not guarantee 24/7 technical support.</string>
    <string name="get_from_my_stash">Get From My Stash</string>
    <string name="about_permissions">KitStasher asks for Camera and Storage permissions. Camera permission is used for barcode scanning and making photos of boxart pictures. Storage permission is used for saving boxart pictures. KitStasher will not be able to work without them.</string>
    <string name="permissions">KitStasher Permissions</string>
</resources>