<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/nav_account" />

        <item
            android:id="@+id/nav_addstash"
            android:icon="@drawable/ic_library_add_black_24dp"
            android:title="@string/nav_manual" />
        <item
            android:id="@+id/nav_viewstash"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/nav_view" />
        <item
            android:id="@+id/nav_mylists"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/Mylists" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_more" />


        <!--<item-->
            <!--android:id="@+id/nav_help"-->
            <!--android:icon="@drawable/ic_help_black_24dp"-->
            <!--android:title="@string/Help" />-->

        <!--<item-->
        <!--android:icon="@drawable/ic_bar_code_menu_black_24dp"-->
        <!--android:title="@string/nav_home" />-->
        <!--<item-->
        <!--android:id="@+id/nav_statistics"-->
        <!--android:icon="@drawable/ic_statistics_black_24dp"-->
        <!--android:title="@string/nav_statistics" />-->

    </group>


</menu>
