<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clSortBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorHighlight"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvBarDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/dp8"
        android:text="@string/date"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvBarName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/dp8"
        android:text="@string/name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvBarBrand"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/dp8"
        android:text="@string/Brand"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvBarScale"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/dp8"
        android:text="@string/scale"
        android:textAlignment="center" />

</LinearLayout>