<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPaintBox"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_menu_camera" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16">

            <EditText
                android:id="@+id/etPaintName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/paint_name"
                android:inputType="textCapWords|textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16">

            <EditText
                android:id="@+id/etPaintCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/paint_code"
                android:inputType="textCapCharacters|textPersonName" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/Brand" />

        <AutoCompleteTextView
            android:id="@+id/acPaintBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:layout_weight="1"
            android:completionHint="@string/paint_brand"
            android:inputType="textCapWords" />


        <LinearLayout
            android:id="@+id/linLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:theme="@style/Widget.AppCompat.ButtonBar">

            <Button
                android:id="@+id/btnCancelPaint"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp8"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/btnPaintSave"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>