<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnListModeMyStash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/get_from_my_stash" />

    <Button
        android:id="@+id/btnListModeManual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/button"
        android:text="@string/Manual_add" />

    <Button
        android:id="@+id/btnListModeScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/button"
        android:text="@string/scan" />

    <!--<Button-->
    <!--android:id="@+id/btnListModeImport"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:layout_marginLeft="20dp"-->
    <!--android:layout_marginRight="20dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:background="@drawable/button_light"-->
    <!--android:text="Import" />-->
</LinearLayout>